--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
             <version>0.2.1</version>
         </dependency>
         <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>nervgh-angular-file-upload</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
