--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.K0zka</groupId>
 	<artifactId>kerub</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Kerub</name>
 	<description>Infrastructure as a Service prototype app</description>
@@ -16,7 +16,7 @@
 	</licenses>
 	<scm>
 		<connection>scm:git:ssh://github.com/kerubistan/kerub</connection>
-		<developerConnection>scm:git:ssh://github.com/kerubistan/kerub</developerConnection>
+		<developerConnection>scm:git:git://github.com/kerubistan/kerub</developerConnection>
 		<url>https://github.com/kerubistan/kerub</url>
   </scm>
 	<organization>
