--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.10.19</version>
+			<version>2.1.0-RC.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -315,7 +315,7 @@
 		<dependency>
 			<groupId>com.nhaarman</groupId>
 			<artifactId>mockito-kotlin</artifactId>
-			<version>0.5.2</version>
+			<version>0.6.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
