authorization pieces  - removed poweruser role - it is going to be a permission in an accuont, not a global role  - added account and membership entities  - quota type can be applied on memberships, accounts and projects - not used, not enforced  - asset interface  - accesChecker interface
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			<version>${angularjs.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>angular-bootstrap-nav-tree-gildo</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>angular-ui-bootstrap</artifactId>
 			<version>${angular-bootstrap.version}</version>
