coveralls configuration for travis ci
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: java
 script: mvn clean verify
 jdk:
   - oraclejdk8
+
+after_success:
+  - mvn -Pcoveralls clean cobertura:cobertura coveralls:report
