--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ jdk:
   - oraclejdk8
 
 after_success:
-  - mvn -Pcoveralls clean cobertura:cobertura coveralls:report
+  - mvn -Pcoveralls clean jacoco:report coveralls:report
