Revert "converalls: switched to jacoco"
This reverts commit 408ef785293a4a23573d7df10a380b76a02a5a5b.

--- a/pom.xml
+++ b/pom.xml
@@ -521,18 +521,15 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>0.7.7.201606060606</version>
-						<executions>
-							<execution>
-								<id>prepare-agent</id>
-								<goals>
-									<goal>prepare-agent</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>cobertura-maven-plugin</artifactId>
+						<version>2.7</version>
+						<configuration>
+							<format>xml</format>
+							<maxmem>256m</maxmem>
+						</configuration>
+					</plugin>
+					<plugin>
 						<groupId>org.eluder.coveralls</groupId>
 						<artifactId>coveralls-maven-plugin</artifactId>
 						<version>4.3.0</version>
