--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 			<version>${angular-bootstrap.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>angular-bootstrap-toggle-switch</artifactId>
+			<version>0.5.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>angularjs-nvd3-directives</artifactId>
 			<version>0.0.7-1</version>
