--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 		<angular-bootstrap.version>1.1.1-1</angular-bootstrap.version>
 		<slf4j.version>1.7.13</slf4j.version>
 		<cucumber.version>1.2.5</cucumber.version>
-		<jackson.version>2.6.5</jackson.version>
+		<jackson.version>2.8.5</jackson.version>
 		<jetty.version>9.2.2.v20140723</jetty.version>
 		<shiro.version>1.3.2</shiro.version>
 		<kovenant.version>3.0.0</kovenant.version>
@@ -227,7 +227,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-kotlin</artifactId>
-			<version>2.6.5-2</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
