close websocket when session gets closed
Bug-Url: TODO
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,10 @@
         </param-value>
     </context-param>
 
+    <listener>
+        <listener-class>com.github.K0zka.kerub.security.UserSessionListener</listener-class>
+    </listener>
+
     <servlet>
         <servlet-name>CXFServlet</servlet-name>
         <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
