--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 	</repositories>
 
 	<properties>
-		<kotlin.version>1.1.4</kotlin.version>
+		<kotlin.version>1.1.4-2</kotlin.version>
 		<spring.version>4.2.9.RELEASE</spring.version>
 		<cxf.version>3.1.12</cxf.version>
 		<infinispan.version>8.2.8.Final</infinispan.version>
