--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,21 @@
 			<id>jcenter</id>
 			<url>http://jcenter.bintray.com/</url>
 		</repository>
+		<repository>
+			<id>kotlin-1.2-beta</id>
+			<url>http://dl.bintray.com/kotlin/kotlin-eap-1.2</url>
+		</repository>
 	</repositories>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>kotlin-1.2-beta</id>
+			<url>http://dl.bintray.com/kotlin/kotlin-eap-1.2</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<properties>
-		<kotlin.version>1.1.4-2</kotlin.version>
+		<kotlin.version>1.2.0-beta-31</kotlin.version>
 		<spring.version>4.2.9.RELEASE</spring.version>
 		<cxf.version>3.1.12</cxf.version>
 		<infinispan.version>8.2.8.Final</infinispan.version>
@@ -42,7 +53,7 @@
 		<angular-bootstrap.version>1.1.1-1</angular-bootstrap.version>
 		<slf4j.version>1.7.13</slf4j.version>
 		<cucumber.version>1.2.5</cucumber.version>
-		<jackson.version>2.8.8</jackson.version>
+		<jackson.version>2.9.1</jackson.version>
 		<jetty.version>9.2.2.v20140723</jetty.version>
 		<shiro.version>1.4.0</shiro.version>
 		<kovenant.version>3.3.0</kovenant.version>
