--- a/pom.xml
+++ b/pom.xml
@@ -37,15 +37,8 @@
 		</repository>
 	</repositories>
 
-	<pluginRepositories>
-		<pluginRepository>
-			<id>kotlin-1.2-beta</id>
-			<url>http://dl.bintray.com/kotlin/kotlin-eap-1.2</url>
-		</pluginRepository>
-	</pluginRepositories>
-
 	<properties>
-		<kotlin.version>1.2.0-beta-88</kotlin.version>
+		<kotlin.version>1.2.0</kotlin.version>
 		<spring.version>4.2.9.RELEASE</spring.version>
 		<cxf.version>3.2.0</cxf.version>
 		<infinispan.version>8.2.8.Final</infinispan.version>
@@ -367,6 +360,7 @@
 						<portName>jetty.port.stop</portName>
 					</portNames>
 				</configuration>
+
 				<executions>
 					<execution>
 						<id>reserve-port</id>
