package descriptions for dokka
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -352,6 +352,9 @@
 					</execution>
 				</executions>
 				<configuration>
+					<includes>
+						<file>packages.md</file>
+					</includes>
 				</configuration>
 			</plugin>
 			<plugin>
