--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.0.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
