--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 		<angular-bootstrap.version>1.1.1-1</angular-bootstrap.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<cucumber.version>1.2.5</cucumber.version>
-		<jackson.version>2.9.1</jackson.version>
+		<jackson.version>2.9.4</jackson.version>
 		<jetty.version>9.2.2.v20140723</jetty.version>
 		<shiro.version>1.4.0</shiro.version>
 		<kovenant.version>3.3.0</kovenant.version>
@@ -237,6 +237,11 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-kotlin</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-afterburner</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
