--- a/pom.xml
+++ b/pom.xml
@@ -270,7 +270,7 @@
 		<dependency>
 			<groupId>com.github.K0zka</groupId>
 			<artifactId>finder4j-backtrack</artifactId>
-			<version>0.6-SNAPSHOT</version>
+			<version>0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
