--- a/pom.xml
+++ b/pom.xml
@@ -477,7 +477,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.21.0</version>
+				<version>2.22.1</version>
+				<configuration>
+					<forkMode>never</forkMode>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
@@ -556,6 +559,14 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<forkMode>never</forkMode>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
