--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 	</pluginRepositories>
 
 	<properties>
-		<kotlin.version>1.3.20-dev-1427</kotlin.version>
+		<kotlin.version>1.3.11</kotlin.version>
 		<spring.version>4.3.19.RELEASE</spring.version>
 		<cxf.version>3.2.3</cxf.version>
 		<infinispan.version>8.2.8.Final</infinispan.version>
