--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,16 @@
 			<version>${kotlin.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>io.github.kerubistan.kroki</groupId>
+			<artifactId>kroki-utils</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.kerubistan.kroki</groupId>
+			<artifactId>kroki-delegates</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-test-junit</artifactId>
 			<version>${kotlin.version}</version>
