--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 
 	<properties>
 		<kotlin.version>1.3.31</kotlin.version>
+		<kroki.version>1.1</kroki.version>
 		<spring.version>4.3.22.RELEASE</spring.version>
 		<cxf.version>3.2.6</cxf.version>
 		<infinispan.version>8.2.11.Final</infinispan.version>
@@ -78,12 +79,12 @@
 		<dependency>
 			<groupId>io.github.kerubistan.kroki</groupId>
 			<artifactId>kroki-utils</artifactId>
-			<version>1.0</version>
+			<version>${kroki.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.github.kerubistan.kroki</groupId>
 			<artifactId>kroki-delegates</artifactId>
-			<version>1.0</version>
+			<version>${kroki.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
