--- a/pom.xml
+++ b/pom.xml
@@ -378,7 +378,7 @@
 			<plugin>
 				<groupId>com.github.K0zka</groupId>
 				<artifactId>contentgzip-maven-plugin</artifactId>
-				<version>0.0.9</version>
+				<version>0.0.10-SNAPSHOT</version>
 				<executions>
 					<execution>
 						<phase>prepare-package</phase>
