--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 	</pluginRepositories>
 
 	<properties>
-		<kotlin.version>1.3.31</kotlin.version>
+		<kotlin.version>1.3.50-dev-759</kotlin.version>
 		<kroki.version>1.1</kroki.version>
 		<spring.version>4.3.24.RELEASE</spring.version>
 		<cxf.version>3.2.6</cxf.version>
