--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 	</pluginRepositories>
 
 	<properties>
+		<sonar.exclusions>src/main/webapp</sonar.exclusions>
 		<kotlin.version>1.3.50-dev-759</kotlin.version>
 		<kroki.version>1.1</kroki.version>
 		<spring.version>4.3.24.RELEASE</spring.version>
