cache javadoc and sdk doc links
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -371,6 +371,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<cacheRoot>default</cacheRoot>
 					<includes>
 						<file>packages.md</file>
 					</includes>
