--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 
 	<properties>
 		<sonar.exclusions>src/main/webapp</sonar.exclusions>
-		<kotlin.version>1.3.50-eap-22</kotlin.version>
+		<kotlin.version>1.3.50</kotlin.version>
 		<kroki.version>1.2</kroki.version>
 		<spring.version>4.3.24.RELEASE</spring.version>
 		<cxf.version>3.2.6</cxf.version>
