changed port number for second node
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -642,6 +642,9 @@
 									<value>dev-auth</value>
 								</systemProperty>
 							</systemProperties>
+							<httpConnector>
+								<port>8081</port>
+							</httpConnector>
 						</configuration>
 						<executions>
 							<execution>
