--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
 
 	<properties>
 		<sonar.exclusions>src/main/webapp</sonar.exclusions>
-		<kotlin.version>1.3.70</kotlin.version>
-		<kroki.version>1.10</kroki.version>
+		<kotlin.version>1.3.72</kotlin.version>
+		<kroki.version>1.15</kroki.version>
 		<spring.version>4.3.24.RELEASE</spring.version>
 		<cxf.version>3.2.6</cxf.version>
 		<infinispan.version>8.2.11.Final</infinispan.version>
@@ -86,6 +86,17 @@
 			<groupId>io.github.kerubistan.kroki</groupId>
 			<artifactId>kroki-delegates</artifactId>
 			<version>${kroki.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.kerubistan.kroki</groupId>
+			<artifactId>kroki-xml</artifactId>
+			<version>${kroki.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.fasterxml</groupId>
+					<artifactId>aalto-xml</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
