--- a/pom.xml
+++ b/pom.xml
@@ -604,7 +604,7 @@
 								<id>start-jetty</id>
 								<phase>pre-integration-test</phase>
 								<goals>
-									<goal>run-exploded</goal>
+									<goal>start</goal>
 								</goals>
 								<configuration>
 									<dumpOnStart>true</dumpOnStart>
