--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 		<slf4j.version>1.7.26</slf4j.version>
 		<cucumber.version>1.2.5</cucumber.version>
 		<jackson.version>2.9.9</jackson.version>
-		<jetty.version>9.2.2.v20140723</jetty.version>
+		<jetty.version>9.4.40.v20210413</jetty.version>
 		<shiro.version>1.7.1</shiro.version>
 		<kovenant.version>3.3.0</kovenant.version>
 		<dokka.version>0.9.18</dokka.version>
@@ -363,6 +363,16 @@
 			<artifactId>reflections</artifactId>
 			<version>0.9.11</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.2</version>
 		</dependency>
 	</dependencies>
 	<build>
