--- a/pom.xml
+++ b/pom.xml
@@ -51,18 +51,18 @@
 
 	<properties>
 		<sonar.exclusions>src/main/webapp</sonar.exclusions>
-		<kotlin.version>1.3.72</kotlin.version>
-		<kroki.version>1.16</kroki.version>
-		<spring.version>4.3.24.RELEASE</spring.version>
-		<cxf.version>3.2.6</cxf.version>
-		<infinispan.version>8.2.11.Final</infinispan.version>
+		<kotlin.version>1.7.20</kotlin.version>
+		<kroki.version>1.23</kroki.version>
+		<spring.version>4.3.29.RELEASE</spring.version>
+		<cxf.version>3.5.4</cxf.version>
+		<infinispan.version>8.2.12.Final</infinispan.version>
 		<angularjs.version>1.4.9</angularjs.version>
 		<angular-bootstrap.version>1.1.1-1</angular-bootstrap.version>
-		<slf4j.version>1.7.26</slf4j.version>
+		<slf4j.version>1.7.36</slf4j.version>
 		<cucumber.version>1.2.5</cucumber.version>
-		<jackson.version>2.9.9</jackson.version>
-		<jetty.version>9.4.40.v20210413</jetty.version>
-		<shiro.version>1.7.1</shiro.version>
+		<jetty.version>9.4.42.v20210604</jetty.version>
+		<jackson.version>2.13.4</jackson.version>
+		<shiro.version>1.10.0</shiro.version>
 		<kovenant.version>3.3.0</kovenant.version>
 		<dokka.version>0.9.18</dokka.version>
 	</properties>
@@ -240,7 +240,7 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
+			<version>1.4.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.wordnik</groupId>
@@ -537,8 +537,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1</version>
+				<version>2.22.2</version>
 			</plugin>
+<!--
 			<plugin>
 				<groupId>com.trivago.rta</groupId>
 				<artifactId>cluecumber-report-plugin</artifactId>
@@ -558,6 +559,7 @@
 					</generatedHtmlReportDirectory>
 				</configuration>
 			</plugin>
+			-->
 		</plugins>
 	</build>
 
@@ -614,11 +616,10 @@
 								<id>start-jetty</id>
 								<phase>pre-integration-test</phase>
 								<goals>
-									<goal>run-exploded</goal>
+									<goal>start</goal>
 								</goals>
 								<configuration>
 									<dumpOnStart>true</dumpOnStart>
-									<daemon>true</daemon>
 									<scanIntervalSeconds>0</scanIntervalSeconds>
 								</configuration>
 							</execution>
@@ -676,7 +677,6 @@
 								</goals>
 								<configuration>
 									<dumpOnStart>true</dumpOnStart>
-									<daemon>true</daemon>
 									<scanIntervalSeconds>0</scanIntervalSeconds>
 								</configuration>
 							</execution>
