artemis upgrade to 2.26 - commons-text upgrade
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- to override the vulnerable dependency by artemis -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.10.0</version>
+		</dependency>
 		<!--needed by artemis-->
 		<dependency>
 			<groupId>commons-beanutils</groupId>
